<resources>
    <string name="app_name">EarthQuake</string>
    <string name="title_activity_maps">Map</string>
    <string name="more_info">More info...</string>
    <string name="show_list">Show List</string>

    <string name="near_the">Near the</string>
    <string name="more_information">More Information</string>
    <string name="title_activity_settings">Settings</string>

    <string name="settings_menu_item">Settings</string>

    <!-- Strings For Minimum Magnitude Preference [CHAR LIMIT=30] -->
    <string name="settings_min_magnitude_label">Minimum Magnitude</string>
    <string name="settings_min_magnitude_key" translatable="false">min_magnitude</string>
    <string name="settings_min_magnitude_default" translatable="false">3</string>


    <!-- Strings For Minimum numbers of earthquake Preference [CHAR LIMIT=30] -->
    <string name="settings_min_numbers_label">Minimum To Show</string>
    <string name="settings_min_numbers_key" translatable="false">numbers</string>
    <string name="settings_min_numbers_default" translatable="false">15</string>

    <!-- Strings For Order-By Preference [CHAR LIMIT=30] -->
    <string name="settings_order_by_label">Order By</string>
    <string name="settings_order_by_key" translatable="false">order_by</string>
    <string name="settings_order_by_default" translatable="false">@string/settings_order_by_most_recent_value</string>

    <!-- Label for order-by magnitude option [CHAR LIMIT=20] -->
    <string name="settings_order_by_magnitude_label">Magnitude</string>
    <string name="settings_order_by_magnitude_value" translatable="false">magnitude</string>

    <!-- Label for order-by most recent option [CHAR LIMIT=20] -->
    <string name="settings_order_by_most_recent_label">Most Recent</string>
    <string name="settings_order_by_most_recent_value" translatable="false">time</string>


</resources>
