<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_min_magnitude_label">

    <ListPreference
        android:defaultValue="@string/settings_order_by_most_recent_label"
        android:entries="@array/settings_order_by_labels"
        android:entryValues="@array/settings_order_by_values"
        android:key="@string/settings_order_by_key"
        android:title="@string/settings_order_by_label" />

    <EditTextPreference
        android:defaultValue="@string/settings_min_magnitude_label"
        android:inputType="numberDecimal"
        android:key="@string/settings_min_magnitude_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_min_magnitude_label" />

    <EditTextPreference
        android:defaultValue="@string/settings_min_numbers_default"
        android:inputType="numberDecimal"
        android:key="@string/settings_min_numbers_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_min_numbers_label" />

</PreferenceScreen>